# alrdmc-server

./: README.md  changescraper.py  poller_descriptions.py  pyproject.toml  run.sh
images/mysql-db/: Dockerfile  create_db.sql
src/: app.py  generate_semantic_vector.py  get_vectors.py  openapi_config.py  poller.py  pyproject.toml  save_vectors.py  scraper.py  scraper_objectives.py  seltest.py  semanticize.py
src/config/: config.py  openapi_config.py
src/db_logic/: get_vectors.py  otakantaa_scraper.py  poller.py  poller_descriptions.py  save_vectors.py  scraper.py  scraper_initiatives.py  scraper_objectives.py  semanticize.py
src/db_logic/scrapers/: .env  poller_change.py  rss_dump.rss  scraper_change.py  scraper_europe_initiatives.py  scraper_european_parliament.py  scraper_kansalaisaloite.py  scraper_open_initiatives.py  scraper_otakantaa.py  semanticize.py
