[tool.poetry]
name = "alrdmc"
version = "0.1.0"
description = "Contains dependencies needed to run the alrdmc server-side application."
authors = ["Miika Matias <miikapiiparinen24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
flask-openapi3 = "^4.0.1"
transformers = "^4.46.2"
pydantic = "^2.9.2"
mysql-connector-python = "^9.1.0"
torch = "^2.5.1"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
